--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -22,4 +22,4 @@ jobs:
         run: npm install
 
       - name: Deploy
-        run: chmod +x deploy.sh && ./deploy.sh
+        run: npm run build
